@@ -74,6 +74,8 @@ import net.sf.rubycollect4j.iter.TakeIterableTest;
 import net.sf.rubycollect4j.iter.TakeIteratorTest;
 import net.sf.rubycollect4j.iter.TakeWhileIterableTest;
 import net.sf.rubycollect4j.iter.TakeWhileIteratorTest;
+import net.sf.rubycollect4j.iter.TransformByMethodIterableTest;
+import net.sf.rubycollect4j.iter.TransformByMethodIteratorTest;
 import net.sf.rubycollect4j.iter.TransformIterableTest;
 import net.sf.rubycollect4j.iter.TransformIteratorTest;
 import net.sf.rubycollect4j.iter.ZipIterableTest;
@@ -129,6 +131,7 @@ import org.junit.runners.Suite.SuiteClasses;
     SliceBeforeIteratorTest.class, StepIterableTest.class,
     StepIteratorTest.class, TakeIterableTest.class, TakeIteratorTest.class,
     TakeWhileIterableTest.class, TakeWhileIteratorTest.class,
+    TransformByMethodIterableTest.class, TransformByMethodIteratorTest.class,
     TransformIterableTest.class, TransformIteratorTest.class,
     ZipIterableTest.class, ZipIteratorTest.class, ByteUtilTest.class,
     DirectiveTest.class, PackerTest.class, PeekingIteratorTest.class,
